# fraktals

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  README_building.md  conanfile.txt
include/glad/: CMakeLists.txt
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
scr/: callback_functions.hpp  koch.cpp  koch.hpp  main.cpp  shader.cpp  shader.hpp  square_commented.cpp  two_VAO.cpp
scr/old/: globals.hpp  koch.cpp  koch.hpp  main.cpp
scr/shaders/: 2D_grid.frag  koch.frag  koch.vert
src/: CMakeCache.txt  CMakeLists.txt  callback_functions.cpp  callback_functions.hpp  koch.cpp  koch.hpp  main.cpp  shader.cpp  shader.hpp
src/shaders/: 2D_grid.frag  koch.frag  koch.vert
